# Agent-Build-and-Evaluation-Practice

./: .env.example  .gitignore  README.md  connectors.py  email_triggers.example.json  gateway.py  langchain-deepagents.py  langgraph.json  paper_review_config.json  pyproject.toml  requirements.txt
archive/: summaries.jsonl
docs/: email-connect-guide.md  slack-connect-guide.md  telegram-connect-guide.md
evaluation/: eval_dataset.json
evaluation/results/: eval_baseline_20260709_064456.json  eval_baseline_20260709_064456.md  eval_candidate_20260709_064456.json  eval_candidate_20260709_064456.md  eval_manual_20260709_064313.json  eval_manual_20260709_064313.md
example_skills/set-email-triggers/: manage_triggers.py
meta/: history.jsonl
output/: paper_brief_20260709.docx  paper_brief_20260709.md
paper_review/: __init__.py  __main__.py  archive.py  arxiv_client.py  briefing.py  config.py  evaluate.py  llm.py  meta_harness.py  observability.py  pdf_extract.py  pipeline.py  summarizer.py
paper_review/fixtures/: arxiv_sample.xml
prompts/: summarizer_system.txt
report/: paper_brief_20260709.docx  paper_brief_20260709.md
workspace_seed/: AGENTS.md
workspace_seed/skills/paper-review/: SKILL.md
workspace_seed/skills/paper-review/references/: rules.md
workspace_seed/skills/paper-review/templates/: briefing.md  summary.md
workspace_seed/skills/set-email-triggers/: SKILL.md
