[project]
name = "agent-build-and-evaluation-practice"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.12",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-tavily>=0.2.0",
    "langgraph-cli[inmem]>=0.4.2",
    "python-dotenv>=1.2.2",
]
